@@ -29,6 +29,8 @@
 	neko : Reflect now uses $fasthash (require neko 1.8.2)
 	all : allow \uXXXX in regexp (although not supported everywhere)
 	js : make difference between values and statements expressions in JSGenApi
+	js : replaced stack emulation when compiling with -debug with source mapping:
+		http://peter.sh/2012/01/css-selector-profiler-source-mapping-and-software-rendering/
 
 2011-09-25: 2.08
 	js : added js.JQuery
